--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-6">
-            <img src="img/obelisco2.jpg" alt="Image" class="img-fluid tm-intro-img" />
+            <img src="/img/Obelisco2.jpg" alt="Image" class="img-fluid tm-intro-img" />
           </div>
           <div class="col-lg-6">
             <div class="tm-intro-text-container">
