--- a/index.html
+++ b/index.html
@@ -99,8 +99,8 @@
                 <div class="grid">
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
-                          <img src="img/vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
-                          <figcaption>
+                          <img src="Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          </figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
                         </figure>
