--- a/index.html
+++ b/index.html
@@ -105,6 +105,47 @@
                           </figcaption>
                         </figure>
                       </a></li>
+                  </div>
+       	    </div>		  
+            <div class="col-sm">
+			    <div class="grid">
+                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                        <figure class="effect-honey">
+                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <figcaption>
+                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                          </figcaption>
+                        </figure>
+                      </a></li>
+				</div>		  
+			</div>		  
+            <div class="col-sm">
+                <div class="grid"> 			
+                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                        <figure class="effect-honey">
+                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <figcaption>
+                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                          </figcaption>
+                        </figure>
+                      </a></li>
+                </div>						  
+            </div>
+		</div>
+        <br>
+        <br>			
+        <div class="row">
+		    
+            <div class="col-sm">
+                <div class="grid">
+                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                        <figure class="effect-honey">
+                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <figcaption>
+                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                          </figcaption>
+                        </figure>
+                      </a></li>
 				</div>
 			</div>		  
             <div class="col-sm">
@@ -123,48 +164,7 @@
                 <div class="grid"> 			
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
-                          <img src="img/gallery-tn-01.jpg" alt="Image" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a></li>
-                </div>						  
-            </div>
-		</div>
-        <br>
-        <br>			
-        <div class="row">
-		    
-            <div class="col-sm">
-                <div class="grid">
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
-                        <figure class="effect-honey">
-                          <img src="img/gallery-tn-01.jpg" alt="Image" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a></li>
-				</div>
-			</div>		  
-            <div class="col-sm">
-			    <div class="grid">
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
-                        <figure class="effect-honey">
-                          <img src="img/gallery-tn-01.jpg" alt="Image" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a></li>
-				</div>		  
-			</div>		  
-            <div class="col-sm">
-                <div class="grid"> 			
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
-                        <figure class="effect-honey">
-                          <img src="img/gallery-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
