--- a/index.html
+++ b/index.html
@@ -96,19 +96,7 @@
         <div class="row">
 		    
             <div class="col-sm">
-                <div class="grid">
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
-                        <figure class="effect-honey">
-                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
-                          </figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a></li>
-                  </div>
-       	    </div>		  
-            <div class="col-sm">
-			    <div class="grid">
+	      <div class="grid">
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
@@ -117,8 +105,20 @@
                           </figcaption>
                         </figure>
                       </a></li>
-				</div>		  
-			</div>		  
+		</div>		  
+	    </div>			  
+            <div class="col-sm">
+	      <div class="grid">
+                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                        <figure class="effect-honey">
+                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <figcaption>
+                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                          </figcaption>
+                        </figure>
+                      </a></li>
+		</div>		  
+	    </div>		  
             <div class="col-sm">
                 <div class="grid"> 			
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
@@ -131,7 +131,7 @@
                       </a></li>
                 </div>						  
             </div>
-		</div>
+	</div>
         <br>
         <br>			
         <div class="row">
@@ -146,10 +146,10 @@
                           </figcaption>
                         </figure>
                       </a></li>
-				</div>
-			</div>		  
+		</div>
+	    </div>		  
             <div class="col-sm">
-			    <div class="grid">
+	            <div class="grid">
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
@@ -158,8 +158,8 @@
                           </figcaption>
                         </figure>
                       </a></li>
-				</div>		  
-			</div>		  
+		   </div>		  
+	    </div>		  
             <div class="col-sm">
                 <div class="grid"> 			
                       <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
@@ -172,7 +172,7 @@
                       </a></li>
                 </div>						  
             </div>
-		</div>
+	</div>
       </div>
     </section>
 
