--- a/index.html
+++ b/index.html
@@ -84,38 +84,28 @@
     <section id="work" class="tm-section-pad-top">
       <div class="container tm-container-gallery">
         <div class="row">
-          <div class="text-center col-12">
-              <h2 class="tm-text-primary tm-section-title mb-4">Nuestro trabajo</h2>
-              <p class="mx-auto tm-work-description">
-                "Curabitur ac orci ac lorem blandit volutpat. Sed ac sodales nibh, ut
-                porttitor elit. Sed id dui mi. Vestibulum ante ipsum primis in faucibus
-                orci luctus et ultrices posuere cubilia."
-              </p>
-          </div>            
-        </div>
-        <div class="row">
             <div class="col-sm">
 	            <div class="grid">
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
                         </figure>
-                      </a></li>
+                      </a>
 		        </div>		  
 	        </div>			  
             <div class="col-sm">
 	            <div class="grid">
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
                         </figure>
-                      </a></li>
+                      </a>
 		        </div>		  
 	        </div>		  
             <div class="col-sm">
@@ -191,7 +181,7 @@
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <a href="mailto:info@company.co" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
-                  <span class="mb-0">abellosi@itba.edu.ar</span>
+                  <span class="mb-0">abelossi@itba.edu.ar</span>
               </a>              
             </div>
 
@@ -202,7 +192,7 @@
             <div class="col-sm-12 col-md-6 d-flex align-items-center tm-contact-item">
               <a href="mailto:info@company.co" class="tm-contact-item-link">
                   <i class="fas fa-3x fa-envelope mr-4"></i>
-                  <span class="mb-0">fmasia@itba.edu.ar</span>
+                  <span class="mb-0">femasia@itba.edu.ar</span>
               </a>              
             </div>
 
