--- a/index.html
+++ b/index.html
@@ -110,14 +110,14 @@
 	        </div>		  
             <div class="col-sm">
                 <div class="grid"> 			
-                      <li><a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
                         </figure>
-                      </a></li>
+                      </a>
                 </div>						  
             </div>
 	    </div>
