--- a/index.html
+++ b/index.html
@@ -98,11 +98,11 @@
 	        </div>			  
             <div class="col-sm">
 	            <div class="grid">
-                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://alvarov0907.github.io/C2020/mapacovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                            <h2><i>Covid <span>Totales</span> por Provincia</i></h2>
                           </figcaption>
                         </figure>
                       </a>
