--- a/index.html
+++ b/index.html
@@ -83,6 +83,13 @@
     </section>
     <section id="work" class="tm-section-pad-top">
       <div class="container tm-container-gallery">
+	    <div class="row">
+          <div class="text-center col-12">
+              <h2 class="tm-text-primary tm-section-title mb-4">Nuestro trabajo</h2>
+          </div>            
+        </div>
+	  
+	  
         <div class="row">
             <div class="col-sm">
 	            <div class="grid">
@@ -161,6 +168,7 @@
                 </div>						  
             </div>
 	    </div>
+	  </div>
     </section>
 
     <!-- Contact -->
