--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 	            <div class="grid">
                       <a href="https://alvarov0907.github.io/C2020/mapacovid.html">
                         <figure class="effect-honey">
-                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/mapa-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Covid <span>Totales</span> por Provincia</i></h2>
                           </figcaption>
