--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
 	        </div>		  
             <div class="col-sm">
                 <div class="grid"> 			
-                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://alvarov0907.github.io/C2020/vacunas_por_grupo_etario">
                         <figure class="effect-honey">
-                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/graficos-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                            <h2><i>Vacunas <span>Aplicadas</span> por rando etario</i></h2>
                           </figcaption>
                         </figure>
                       </a>
