--- a/index.html
+++ b/index.html
@@ -119,9 +119,9 @@
                 <div class="grid"> 			
                       <a href="https://alvarov0907.github.io/C2020/vacunas_por_grupo_etario">
                         <figure class="effect-honey">
-                          <img src="img/graficos-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/rangoetario-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> por rando etario</i></h2>
+                            <h2><i>Vacunas <span>Aplicadas </span>por rango etario</i></h2>
                           </figcaption>
                         </figure>
                       </a>
