--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	            <div class="grid">
                       <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
                         <figure class="effect-honey">
-                          <img src="img/graficos-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/vacunas-aplicadas-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
                           </figcaption>
