--- a/index.html
+++ b/index.html
@@ -133,11 +133,11 @@
         <div class="row">
             <div class="col-sm">
                 <div class="grid">
-                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://fermasia.github.io/infovis/heatmap_vacunacion.html">
                         <figure class="effect-honey">
                           <img src="img/heatmap-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                            <h2><i>Ratio <span>Poblacion vacunada </span>1ra Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -145,11 +145,11 @@
 	        </div>		  
             <div class="col-sm">
 	            <div class="grid">
-                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://fermasia.github.io/infovis/mapa_chropleth_arg.html">
                         <figure class="effect-honey">
-                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/ratio-vacunas-1dosis.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                            <h2><i>Ratio <span>Vacuna por Provincia </span>1ra Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -157,11 +157,11 @@
 	        </div>		  
             <div class="col-sm">
                 <div class="grid"> 			
-                      <a href="https://alvarov0907.github.io/C2020/vacunascovid.html">
+                      <a href="https://fermasia.github.io/infovis/vacunas_y_fallecimientos.html">
                         <figure class="effect-honey">
-                          <img src="img/Vacunas-img-tn-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/Fallecidos-y-vacunados-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Vacunas <span>Aplicadas</span> en Argentina</i></h2>
+                            <h2><i>Fallecidos <span>y Vacunados </span> Por día</i></h2>
                           </figcaption>
                         </figure>
                       </a>
