--- a/index.html
+++ b/index.html
@@ -66,16 +66,15 @@
           </div>
           <div class="col-lg-6">
             <div class="tm-intro-text-container">
-                <h2 class="tm-text-primary mb-4 tm-section-title">Introduction</h2>
-                <p class="mb-4 tm-intro-text">
-                  The Town is <strong>simple CSS template</strong> built on Bootstrap v4.1.3 
-                  and this is a little parallax layout that you can use for your websites.
+                <h2 class="tm-text-primary tm-section-title">Introduction</h2>
+                <p class="tm-intro-text"> 
+				  En el marco de la materia "Visualización de la Información" de la Especialización en Ciencias de Datos 
+				  en Instituto Tecnológico de Bs.As., efectuamos una colección de visualizaciones realizadas con distintas 
+				  herramientas <strong>(Vega-Lite, Flourish, Tableau, Altair, Datawrapper,etc.)</strong> sobre COVID 19 en Argentina. 
               </p>
-                <p class="mb-5 tm-intro-text">
-                  Please tell your friends about our site 
-                  <a rel="nofollow" href="https://templatemo.com">templatemo</a>. Thank you.
-                  Curabitur dapibus tristique enim a imperdiet. Etiam
-              tristique sem sed condimentum posuere. </p>
+                <p class="tm-intro-text">
+                  Los datos de vacunación, contagios, testeos y población utilizados fueron obtenidos de diferentes
+				  páginas de entes públicos (ministerio de saludos, INDEC, etc.).</p>
             </div>
           </div>
         </div>
@@ -149,7 +148,7 @@
                         <figure class="effect-honey">
                           <img src="img/ratio-vacunas-1dosis.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Ratio <span>Vacuna por Provincia </span>1ra Dosis</i></h2>
+                            <h2><i>Ratio <span>Vacunas por Provincia </span>1ra Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -161,7 +160,7 @@
                         <figure class="effect-honey">
                           <img src="img/Fallecidos-y-vacunados-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Fallecidos <span>y Vacunados </span> Por día</i></h2>
+                            <h2><i>Fallecidos y <span>Vacunados </span> Por día</i></h2>
                           </figcaption>
                         </figure>
                       </a>
