--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
               </p>
                 <p class="tm-intro-text">
                   Los datos de vacunación, contagios, testeos y población utilizados fueron obtenidos de diferentes
-				  páginas de entes públicos (ministerio de saludos, INDEC, etc.).</p>
+				  páginas de entes públicos (Ministerio de Salud, INDEC, etc.).</p>
             </div>
           </div>
         </div>
