--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
           </div>
           <div class="col-lg-6">
             <div class="tm-intro-text-container">
-                <h2 class="tm-text-primary tm-section-title">Introduction</h2>
+                <h2 class="tm-text-primary tm-section-title">Introducción</h2>
                 <p class="tm-intro-text"> 
 				  En el marco de la materia "Visualización de la Información" de la Especialización en Ciencias de Datos 
 				  en Instituto Tecnológico de Bs.As., efectuamos una colección de visualizaciones realizadas con distintas 
