--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                         <figure class="effect-honey">
                           <img src="img/heatmap-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Ratio <span>Poblacion vacunada </span>1ra Dosis</i></h2>
+                            <h2><i>Ratio <span>Poblacion vacunada </span>1ra y 2da Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
