--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
 
             <div class="col-sm">
 	            <div class="grid">
-                      <a href="">
+                      <a href="https://mmelitba.github.io/infovis/MapTableauCovid.html">
                         <figure class="effect-honey">
                           <img src="img/Vacunas-img-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Libre <span>Mapa</span> Marcos</i></h2>
+                            <h2><i>Ratio <span>Vacunas por Provincia</span> 1ra y 2da Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
@@ -300,16 +300,7 @@
                 </div>						  
             </div>	  
             <div class="col-sm">
-                <div class="grid"> 			
-                      <a href="">
-                        <figure class="effect-honey">
-                          <img src="img/Vacunas-img-01.jpg" alt="Image" class="img-fluid">
-                          <figcaption>
-                            <h2><i>libre <span>Libre </span> Libre</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                </div>						  
+						  
             </div>
 	    </div>
 	  </div>
