--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
 	            <div class="grid">
                       <a href="https://mmelitba.github.io/infovis/MapTableauCovid.html">
                         <figure class="effect-honey">
-                          <img src="img/Vacunas-img-01.jpg" alt="Image" class="img-fluid">
+                          <img src="img/ratio-vacunas-1_2 dosis.jpg" alt="Image" class="img-fluid">
                           <figcaption>
                             <h2><i>Ratio <span>Vacunas por Provincia</span> 1ra y 2da Dosis</i></h2>
                           </figcaption>
