--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
                         <figure class="effect-honey">
                           <img src="img/mapa-tot-Prov-img-tn-01.jpg" alt="Image" class="img-fluid">
                           <figcaption>
-                            <h2><i>Covid <span>Totales</span> por Provincia</i></h2>
+                            <h2><i>Ratio <span>Vacunas por Provincia</span> 1ra y 2da Dosis</i></h2>
                           </figcaption>
                         </figure>
                       </a>
