--- a/index.html
+++ b/index.html
@@ -75,6 +75,10 @@
                 <p class="tm-intro-text">
                   Los datos de vacunación, contagios, testeos y población utilizados fueron obtenidos de diferentes
 				  páginas de entes públicos (Ministerio de Salud, INDEC, etc.).</p>
+	        <p class="tm-intro-text">
+		  <a href="https://github.com/fermasia/infovis/blob/gh-pages/Armado_Dataset.ipynb" target="_blank" title="armado dataset"><strong>
+			  Notebook utilizada para transfomar los datos utilizados como base para las visualizaciones</strong></a></span></span>
+		</p>
             </div>
           </div>
         </div>
